<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="12dp"
                android:text="BATTERY MANAGER"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#000000"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imgUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/ic_info_new" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain">


        <me.itangqi.waveloadingview.WaveLoadingView
            android:id="@+id/waveLoadingView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:wlv_borderColor="@color/colorAccent"
            app:wlv_borderWidth="3dp"
            app:wlv_progressValue="40"
            app:wlv_round_rectangle="true"
            app:wlv_shapeType="circle"
            app:wlv_titleCenterStrokeWidth="3dp"
            app:wlv_triangle_direction="north"
            app:wlv_waveColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtbattery_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dp"
            android:text="Hours Remaining"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txtstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:outlineProvider="paddedBounds"
            android:padding="6dp"
            tools:text="Bettery Discharging" />

        <TextView
            android:id="@+id/txtcharge_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="6dp"
            tools:text="Bettery Discharging" />

        <TextView
            android:id="@+id/txtport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="6dp"
            tools:text="Bettery Discharging" />
    </LinearLayout>


    <Button
        android:id="@+id/run_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingStart="10dip"
        android:paddingLeft="5dip"
        android:paddingTop="5dip"
        android:paddingEnd="10dip"
        android:paddingRight="5dip"
        android:paddingBottom="5dip"
        android:text="@string/background_apps"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/llBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTop" />


    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/run_app">

        <TextView
            android:id="@+id/tipsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="10dip"
            android:paddingLeft="5dip"
            android:paddingTop="25dip"
            android:paddingEnd="10dip"
            android:paddingRight="5dip"
            android:paddingBottom="5dip"
            android:text="@string/tips_label"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingBottom="5dip"
            android:text="@string/first_tip"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>